# AndroidTracClient

./: svn-commit.2.tmp~  svn-commit.tmp~
Android/: android.html  android.js  desktop.css  index.html
DBIx-XMLServer/: Makefile.old  XMLServer.pm
TracClient/: AndroidManifest.xml  build.gradle  build.xml  gradle.properties  lint.xml  project.properties
bsn/: aandelen.sh  all_names  behr.pl  bsn2pg.cpp  cnvdate.awk  dbase.bsn.awk  delst.pl  do_it  euroconv.pl  ins_vert  namen.lst  nmlst.sh  pg.bsn.awk  plot.sh  plt_all.sh  rdaand.pl  rdspaar.pl  splits.pl  x.pl
cnvnews/: Makefile
convesc/: Makefile  convtbl  convtbl.l  convtbl.xs4all.l  lex.yy.c  skipheader  skipheader.cpp
croon/: Makefile  croon.css  croon.js  index.cgi
eisen/: Makefile.am  configure.ac  eisen.cpp  eisparser.cpp  eisparser.h
exiftools/: check_picdb.pl  makemp3cd.pl  mp3tags.pl
folders/: mb_2_soup
gedcom/: g.pl  vanloon-mundia.ged  vanloon.ged
geotag/: geotag.pl
geturl/: Makefile  geturl  geturl.c
giro/: Makefile  giro.cgi  giro.l  giro.y  mkoverview.pl  overview.xls  pg_giro.c
googlecontacts/: CDB.php  Contacts.php  DB_Contacts.php  GMail_Contacts.php  getcontact.php  maakimport.pl
gpscorr/: Makefile  f477.c++
invert/: Resource.h  invert.cpp  invert.def  invert.dsp
koersen/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  configure.scan  csvtopg.pl  dbfile.h  koersen.h  koersen_mount.pl  koerslex.c  koerssyn.c  koerssyn.cpp  koerssyn.h  koerssyn.output  koerssyn.ypp  rend.cpp  rendement.cpp  sql.txt  tt.cpp  tts.cpp  tts_new.cpp
laptop/: recover.c
lib/: Makefile  Makefile.in  Makefile.orig  acconfig.h  browser.lo  cgi_dir.c  cgi_dir.lo  check_user.c  config.h  configure  configure.in  crypt.c  d_addrec.lo  d_blank.c  d_blank.lo  d_close.c  d_close.lo  d_cpystr.c  d_getfld.lo  d_getrec.lo  docbegin.c  docbegin.lo  eval_nis.c  eval_nis.lo  feestdag.c  feestdag.lo  forms.c  forms.lo  libmfl.la  makefile.www  patchlevel.h  pie.c  plotdb.h  plotit.c  radio.lo  ref.lo  scale.c  scale.lo  sockextr.h  sockextr.lo  (+7 more)
lib/.deps/: binsert.Plo  browser.Po  cgi_dir.Plo  cgi_dir.Po  d_addrec.Plo  d_addrec.Po  d_close.Po  d_cpystr.Po  d_create.Plo  d_create.Po  d_getfld.Po  d_getrec.Po  d_open.Plo  d_open.Po  d_putfld.Po  d_putrec.Plo  datump.Plo  docbegin.Plo  docbegin.Po  eval_nis.Plo  eval_nis.Po  feestdag.Plo  forms.Plo  forms.Po  hf.Po  mflversion.Po  radio.Po  require_post.Plo  sockextr.Plo  swap4.Po  test_bewoner.Plo
lib/autom4te.cache/: output.1  requests  traces.1
maakpois/: Euro95 6 cent goedkoper.ov2  Euro98 6 cent goedkoper.ov2  allcoord.pl  gm.pl  iGO.db  iGO.db.save  iGO.kml  leespoi.pl  leestrack.pl  pois.csv
myAJAX/: index.php
osm/: Makefile  Makefile.am  astar.cpp  astar.pl  astarconf.h  astarconf.xml  cache.h  config.h.in  configure.ac  db_create.cpp  db_fix.cpp  db_getelements.cpp  db_postprocess.cpp  db_sql3_create.cpp  db_sql3_fix.cpp  dijkstra.cpp  eisparser.cpp  eisparser.h  element.cpp  getmap.sh  gzstream.cpp  interpol.cpp  interpol.h  main.cpp  map.cpp  map_conf.cpp  mkdb.cpp  myparser.cpp  myparser.h  node.cpp  osm.cpp  osm.h  osm_db.cpp  osm_db.h  osm_db_except.cpp  osm_except.cpp  osmapi.cpp  osmapi.h  osmparser.cpp  osmparser.h  (+6 more)
osm/OSM/: Map.pm
osm/OSM/Map/: Db.pm
osm/gnulib/: Makefile.am  Makefile.in
perl/: DataSource.pm  FondsenDB.pm  ProxyList.pm  euronext.1.csv
pkmimport/: pkmimport.pl
plot_db/: Barchart  Barchart.cpp.orig  Barchart.cpp.xxx  Makefile  Scatchart.cpp  acconfig.h  config.h  config.h.in  configure  results.h
poi/: Euro95 6 cent goedkoper.ov2.bak  Flitsservice.asc  Flitsservice.ov2  Flitsservice.ov2.bak  LPG 6 cent goedkoper.asc  RF-BE-AST100.asc  RF-BE-AST100.ov2  RF-BE-AST120.asc  RF-BE-AST120.inf  RF-BE-AST30.asc  RF-BE-AST30.inf  RF-BE-AST50.asc  RF-BE-AST60.ov2  RF-BE-AST70.inf  RF-BE-AST80.asc  RF-BE-AST80.ov2  RM-BE-030.inf  RM-BE-030.ov2  RM-BE-080.inf  RM-BE-090.inf  RM-BE-120.asc  RM-BE-120.ov2  (+41 more)
poi-old/: close200.txt  poi.pl
trunk/lib/: Makefile.am  Makefile.bak  aclocal.m4  binsert.c  binsert.lo  bitcount.c  browser.c  check_user_nis.c  config.h.in  config.status  configure.scan  crypt_util.c  d_addrec.c  d_cpystr.lo  d_create.c  d_create.lo  d_getfld.c  d_getrec.c  d_open.c  d_open.lo  d_putfld.c  d_putfld.lo  d_putrec.c  d_putrec.lo  datump.c  datump.lo  dbcopy.c  hf.c  hf.lo  libtool  mflversion.c  mflversion.lo  plotdb.c  radio.c  ref.c  require_post.c  require_post.lo  sockextr.c  stripcr.c  strupr.c  (+4 more)
trunk/lib/.deps/: binsert.Po  browser.Plo  d_blank.Plo  d_blank.Po  d_close.Plo  d_cpystr.Plo  d_getfld.Plo  d_getrec.Plo  d_putfld.Plo  d_putrec.Po  datump.Po  feestdag.Po  hf.Plo  mflversion.Plo  radio.Plo  ref.Plo  ref.Po  require_post.Po  scale.Plo  scale.Po  sockextr.Po  stripcr.Plo  stripcr.Po  strupr.Plo  strupr.Po  style.Plo  style.Po  swap4.Plo  test_bewoner.Po  weeknr.Plo  weeknr.Po
trunk/lib/autom4te.cache/: output.0  output.2  traces.0  traces.2
trunk/osm/: Makefile  Makefile.am  astar.cpp  astar.pl  astarconf.h  astarconf.xml  cache.h  config.h.in  configure.ac  db_create.cpp  db_getelements.cpp  db_postprocess.cpp  db_sql3_fix.cpp  db_sql3_getelements.cpp  dijkstra.pl  eisen.cpp  eisparser.cpp  eisparser.h  element.cpp  getmap.sh  grootcirkel.h  gzstream.h  interpol.cpp  main.cpp  map.cpp  map_conf.cpp  mkdb.cpp  myfuncs.h  myparser.cpp  myparser.h  node.cpp  osm.cpp  osm.h  osm2sqlite.pl  osm_db.cpp  osm_db.h  osm_except.cpp  osmapi.cpp  osmapi.h  osmparser.cpp  (+8 more)
trunk/osm/OSM/: Map.pm
trunk/osm/OSM/Map/: Db.pm
trunk/plot_db/: Barchart.cpp  Makefile.am  Makefile.in  Makefile.orig  Scatchart  config.status  configure.in  getresults.cpp
trunk/plot_db/autom4te.cache/: requests  traces.0
ttx/: AUTHORS  Makefile.in  README  config.h.in  config.h.in.rej  configure  configure.in  configure.scan  sockextr.cpp  ttx.cpp
ttx/autom4te.cache/: traces.1
ttx/compile-linux/: Makefile  config.h  ttx
ttx/compile-linux/.deps/: htget.Po  sockextr.Po  ttx.Po
ttx/compile-win32/: config.h  config.status
ttx/compile-win32/.deps/: htget.Po  sockextr.Po  ttx.Po
(+1711 files in other folders)
