dnl Process this file with autoconf to produce a configure script.
AC_INIT(binsert.c)
AM_INIT_AUTOMAKE(libmfl,2.0.1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(stricmp gethostname socket strdup strstr inet_addr inet_aton inet_ntoa)

AC_OUTPUT(Makefile)
