SHELL=/bin/sh

SUFFIXES=".c .o"

AM_CFLAGS=-O2 -Wall

lib_LTLIBRARIES = libmfl.la

lib_LIBRARIES = libmfl.a

libmfl_a_SOURCES = binsert.c \
browser.c \
cgi_dir.c \
d_addrec.c \
d_blank.c \
d_close.c \
d_cpystr.c \
d_create.c \
d_getfld.c \
d_getrec.c \
d_open.c \
d_putfld.c \
d_putrec.c \
datump.c \
docbegin.c \
eval_nis.c \
feestdag.c \
forms.c \
hf.c \
mflversion.c \
radio.c \
ref.c \
require_post.c \
scale.c \
sockextr.c \
stripcr.c \
strupr.c \
style.c \
swap4.c \
test_bewoner.c \
weeknr.c

libmfl_la_LDFLAGS = -version-info 0:1:0
libmfl_la_SOURCES = binsert.c \
browser.c \
cgi_dir.c \
d_addrec.c \
d_blank.c \
d_close.c \
d_cpystr.c \
d_create.c \
d_getfld.c \
d_getrec.c \
d_open.c \
d_putfld.c \
d_putrec.c \
datump.c \
docbegin.c \
eval_nis.c \
feestdag.c \
forms.c \
hf.c \
mflversion.c \
radio.c \
ref.c \
require_post.c \
scale.c \
sockextr.c \
stripcr.c \
strupr.c \
style.c \
swap4.c \
test_bewoner.c \
weeknr.c


all-local: $(CONFIG_HEADER)
